--- a/01_agama/ekottarika/11/EA_11_05.md
+++ b/01_agama/ekottarika/11/EA_11_05.md
@@ -1,39 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 11. The Non-Returner | 5. Heart'
+title: 'The Numerical Discourses | Chapter 11: The Non-Returner | 5. Heart'
 type: kramdown
 base: ../../../
 previous: EA_11_04.html
 next: EA_11_06.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 11: The Non-Returner
-### 5. Heart
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 11: The Non-Returner</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(五) 心</th>
+  <th class='en'>5. Heart</th>
+  <tr>
+    <td class='ch' title='T125.2.566c9'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566c10'>爾時，世尊告諸比丘： 「我於此眾初不見一法不可降伏。難得時，宜受諸苦報。 所謂心是。 諸比丘，此心不可降伏。 難得時，宜受諸苦報。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “From the start, I don’t see in this assembly a single thing that’s uncontrollable and which is sure to bring a result of suffering when its difficult to control. That thing is the heart. Monks, this heart is uncontrollable. When its difficult to gain control of it, it surely brings a result of suffering.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566c13'>「是故，諸比丘，當分別心。 當思惟心，善念諸善本。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, one should discern their heart. They should pay attention to their heart and be well aware of its roots of goodness. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566c14'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “From the start, I don’t see in this assembly a single thing that’s uncontrollable and which is sure to bring a result of suffering when its difficult to control. That thing is the heart. Monks, this heart is uncontrollable. When its difficult to gain control of it, it surely brings a result of suffering.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, one should discern their heart. They should pay attention to their heart and be well aware of its roots of goodness. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0566c09" target="_blank">T125.2.566c9-15</a>. This and the next <em>sūtra</em> are similar to those found in <a href="https://suttacentral.net/an1.21-30" target="_blank">AN 1.21-30</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 8 April 2023</p>
 
-### Notes
-
-1. {:#n1} This and the next <em>sūtra</em> are similar to those found in <a href="https://suttacentral.net/an1.21-30" target="_blank">AN 1.21-30</a>. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 8 April 2023
-{: .revised}
-
----
+<hr/>
