--- a/01_agama/ekottarika/11/EA_11_06.md
+++ b/01_agama/ekottarika/11/EA_11_06.md
@@ -1,39 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 11. The Non-Returner | 6. Heart (2)'
+title: 'The Numerical Discourses | Chapter 11: The Non-Returner | 6. Heart (2)'
 type: kramdown
 base: ../../../
 previous: EA_11_05.html
 next: EA_11_07.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 11: The Non-Returner
-### 6. Heart (2)
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 11: The Non-Returner</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(六) 心</th>
+  <th class='en'>6. Heart (2)</th>
+  <tr>
+    <td class='ch' title='T125.2.566c16'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566c17'>爾時，世尊告諸比丘： 「我於此眾初不見一法易降伏者，易得時宜受諸善報。 所謂心是。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “From the start, I do not see in this assembly a single thing that’s easily controlled and which brings a good result when its easily controlled. That thing is the heart.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566c19'>「諸比丘，當分別心，善念諸善本。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “[Therefore,] monks, one should discern their heart and be well aware of its good roots. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566c20'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “From the start, I do not see in this assembly a single thing that’s easily controlled and which brings a good result when its easily controlled. That thing is the heart.
-{:#p2}
+<hr/>
 
-3\. “[Therefore,] monks, one should discern their heart and be well aware of its good roots. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0566c16" target="_blank">T125.2.566c16-21</a>. This and the previous <em>sūtra</em> are similar to those found in <a href="https://suttacentral.net/an1.21-30" target="_blank">AN 1.21-30</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 8 April 2023</p>
 
-### Notes
-
-1. {:#n1} This and the previous <em>sūtra</em> are similar to those found in <a href="https://suttacentral.net/an1.21-30" target="_blank">AN 1.21-30</a>. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 8 April 2023
-{: .revised}
-
----
+<hr/>
