--- a/01_agama/ekottarika/11/EA_11_07.md
+++ b/01_agama/ekottarika/11/EA_11_07.md
@@ -1,40 +1,47 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 11. The Non-Returner | 7. Alms'
+title: 'The Numerical Discourses | Chapter 11: The Non-Returner | 7. Alms'
 type: kramdown
 base: ../../../
 previous: EA_11_06.html
 next: EA_11_08.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 11: The Non-Returner
-### 7. Alms
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 11: The Non-Returner</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(七) 食</th>
+  <th class='en'>7. Alms</th>
+  <tr>
+    <td class='ch' title='T125.2.566c22'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566c23'>爾時，世尊告諸比丘： 「於此眾中，若有一人而作是念，我悉知之。 然後，此人不以飮食，在大眾中而虚妄語。 我，或復於異時，觀見此人，生染著心念於財物。 便於大眾中而作妄語。 所以然者？ 諸比丘，財物染著甚為難捨。 令人墜墮三惡道中，不得至無為之處。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks,  “There was a person thinking in this assembly, and I fully knew it.<sup id="ref2"><a href="#n2">2</a></sup> Afterward, it wasn’t possible for this person to eat their meal, for they had spoken falsely in the great assembly. On some other occasion, I examined this person, and they had become obsessed with thoughts about valuable things. Then, they spoke falsely to the great assembly. Why was that? Monks, obsessions with valuable things are very difficult to abandon. They cause people to fall to the three bad destinations and not reach the unconditioned state.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566c29'>「是故，諸比丘，已生此心，便當捨離。 設未生者，勿復興心染著財物。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, one must abandon these thoughts that have arisen. If they have yet to arise, then don’t create anymore thoughts that are obsessed with valuable things. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567a2'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks,  “There was a person thinking in this assembly, and I fully knew it.[\[2\]](#n2){:#ref2} Afterward, it wasn’t possible for this person to eat their meal, for they had spoken falsely in the great assembly. On some other occasion, I examined this person, and they had become obsessed with thoughts about valuable things. Then, they spoke falsely to the great assembly. Why was that? Monks, obsessions with valuable things are very difficult to abandon. They cause people to fall to the three bad destinations and not reach the unconditioned state.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, one must abandon these thoughts that have arisen. If they have yet to arise, then don’t create anymore thoughts that are obsessed with valuable things. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0566c22" target="_blank">T125.2.566c22-7a3</a>. This <em>sūtra</em> and the next are very similar in subject and format to <a href="https://suttacentral.net/sn17.11" target="_blank">SN 17.11-20</a>, but they don’t use specific examples of valuable things like gold and silver. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p>It should be noted that the C. translations  garbled in the opening paragraphs of this and next the <em>sūtra</em>, but knowledge of their parallels makes it possible to sort out what the original said. For example, the opening line of this <em>sūtra</em> could easily be read to say: “If there’s a person in this assembly who thinks, ‘I fully know it’” (i.e., 若有一人而作是念：「我悉知之」). But the parallels make it clear that the Buddha was fully knew what the person was thinking. The nature of those thoughts isn’t described here, which may well be because of a loss of text. The situation is even more confusing in the next <em>sūtra</em>’s opening line because it doesn’t indicate who is thinking. On the other hand, it includes a description of the person’s thinking before they became obsessed with valuable things. Thus, between the two <em>sūtra</em>s, we can more-or-less reconstruct what the opening lines said with help from the Theravāda parallels. Nonetheless, I’ve added as little as possible to the extant C. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 7 May 2023</p>
 
-### Notes
-
-1. {:#n1} This <em>sūtra</em> and the next are very similar in subject and format to <a href="https://suttacentral.net/sn17.11" target="_blank">SN 17.11-20</a>, but they don’t use specific examples of valuable things like gold and silver. [\[back\]](#ref1)
-2. {:#n2} It should be noted that the C. translations  garbled in the opening paragraphs of this and next the <em>sūtra</em>, but knowledge of their parallels makes it possible to sort out what the original said. For example, the opening line of this <em>sūtra</em> could easily be read to say: “If there’s a person in this assembly who thinks, ‘I fully know it’” (i.e., 若有一人而作是念：「我悉知之」). But the parallels make it clear that the Buddha was fully knew what the person was thinking. The nature of those thoughts isn’t described here, which may well be because of a loss of text. The situation is even more confusing in the next <em>sūtra</em>’s opening line because it doesn’t indicate who is thinking. On the other hand, it includes a description of the person’s thinking before they became obsessed with valuable things. Thus, between the two <em>sūtra</em>s, we can more-or-less reconstruct what the opening lines said with help from the Theravāda parallels. Nonetheless, I’ve added as little as possible to the extant C. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 07 May 2023
-{: .revised}
-
----
+<hr/>
