--- a/01_agama/ekottarika/11/EA_11_08.md
+++ b/01_agama/ekottarika/11/EA_11_08.md
@@ -1,39 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 11. The Non-Returner | 8. Alms (2)'
+title: 'The Numerical Discourses | Chapter 11: The Non-Returner | 8. Alms (2)'
 type: kramdown
 base: ../../../
 previous: EA_11_07.html
 next: EA_11_09.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 11: The Non-Returner
-### 8. Alms (2)
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 11: The Non-Returner</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(八) 食</th>
+  <th class='en'>8. Alms (2)</th>
+  <tr>
+    <td class='ch' title='T125.2.567a4'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567a5'>爾時，世尊告諸比丘： 「於此眾中，而作是念。 正使命斷，不於眾中而作妄語。 我，或復於異時，觀見此人，生染著心念於財物。 便於大眾中而作妄語。 所以然者？ 諸比丘，財物染著甚為難捨。 令人墮三惡道中，不得至無為之處。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Someone was thinking in this assembly. Even if their lives would end, they wouldn’t have spoken falsely to the assembly. On some other occasion, I examined this person, and they had become obsessed with thoughts about valuable things. Then, they spoke falsely to the great assembly. Why was that? Monks, obsessions with valuable things are very difficult to abandon. They cause people to fall to the three bad destinations and not reach the unconditioned state.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567a10'>「是故，諸比丘，已生此心，便當捨離。 若未生者，勿復興心染著財物。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, one must abandon these thoughts that have arisen. If they have yet to arise, then don’t create anymore thoughts that are obsessed with valuable things. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567a12'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Someone was thinking in this assembly. Even if their lives would end, they wouldn’t have spoken falsely to the assembly. On some other occasion, I examined this person, and they had become obsessed with thoughts about valuable things. Then, they spoke falsely to the great assembly. Why was that? Monks, obsessions with valuable things are very difficult to abandon. They cause people to fall to the three bad destinations and not reach the unconditioned state.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, one must abandon these thoughts that have arisen. If they have yet to arise, then don’t create anymore thoughts that are obsessed with valuable things. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0567a04" target="_blank">T125.2.567a4-13</a>. This <em>sūtra</em> and the previous one are very similar in subject and format to <a href="https://suttacentral.net/sn17.11" target="_blank">SN 17.11-20</a>, but these <em>sūtra</em>s don’t provide specific examples of valuable things. See the notes to the previous <em>sūtra</em> for more comments about these <em>sūtra</em>s and their parallels. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 7 May 2023</p>
 
-### Notes
-
-1. {:#n1} This <em>sūtra</em> and the previous one are very similar in subject and format to <a href="https://suttacentral.net/sn17.11" target="_blank">SN 17.11-20</a>, but these <em>sūtra</em>s don’t provide specific examples of valuable things. See the notes to the previous <em>sūtra</em> for more comments about these <em>sūtra</em>s and their parallels. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 07 May 2023
-{: .revised}
-
----
+<hr/>
