--- a/01_agama/ekottarika/11/EA_11_09.md
+++ b/01_agama/ekottarika/11/EA_11_09.md
@@ -1,49 +1,58 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 11. The Non-Returner | 9. Devadatta'
+title: 'The Numerical Discourses | Chapter 11: The Non-Returner | 9. Devadatta'
 type: kramdown
 base: ../../../
 previous: EA_11_08.html
 next: EA_11_10.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 11: The Non-Returner
-### 9. Devadatta
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 11: The Non-Returner</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Squirrels’ Bamboo Park of Rājagṛha.[\[2\]](#n2){:#ref2} He was accompanied by a great assembly of five hundred monks.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(九) 提婆達兜</th>
+  <th class='en'>9. Devadatta</th>
+  <tr>
+    <td class='ch' title='T125.2.567a14'>聞如是： 一時，佛在羅閲城、迦蘭陀竹園所。 與大比丘眾五百人倶。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Squirrels’ Bamboo Park of Rājagṛha.<sup id="ref2"><a href="#n2">2</a></sup> He was accompanied by a great assembly of five hundred monks.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567a15'>爾時，世尊告諸比丘： 「云何諸比丘？ 頗有見提婆達兜清白之法乎？ 然復，提婆達兜為惡深重，受罪經劫，不可療治。 於我法中，不見毫釐之善可稱記者。 以是之故，我今説提婆達兜諸罪之原首不可療治。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “How is it, monks? Does anyone see Devadatta’s<sup id="ref3"><a href="#n3">3</a></sup> teaching as clean? Still, Devadatta’s evil is quite grave, and he’ll get a punishment for an eon<sup id="ref4"><a href="#n4">4</a></sup>, which cannot be cured. I do not see a thread’s breadth of goodness in my Dharma that someone could describe of him. Because of this, I now say that the source of Devadatta’s punishment cannot be cured.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567a20'>「猶如有人而墮深厠。 形體沒溺，無有一淨處。 有人欲來濟拔其命，安置淨處。 遍觀厠側及彼人身，頗有淨處？『吾欲手捉拔濟出之。』彼人熟視，無一淨處而可捉者，便捨而去。</td>
+    <td id='p3'>3. “He’s like a man who fell into a deep latrine. His whole body was submerged in it, and nowhere is he clean. Someone comes along to save his life and put him somewhere clean. Looking all around the sides of the latrine and that man, would they see a clean place? [The man asks,] ‘I’d like to grab something and pull myself out.’ But after looking over that place where nothing is clean for something the man could grab, they would give up and leave.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567a24'>「如是，諸比丘，我觀提婆達兜，愚癡之人。 不見毫釐之法而可記者。 受罪經劫，不可療治。 所以然者？ 提婆達兜愚癡專意。 偏著利養，作五逆罪已， 身壞命終，生惡趣中。 如是，諸比丘，利養深重，令人不得至安隱之處。</td>
+    <td id='p4'>4. “Thus, monks, do I regard that fool Devadatta. I do not see a thread’s breadth of goodness that someone could describe of him. He’ll get a punishment for an eon that cannot be cured. Why is that? Devadatta was focused on foolishness. Inclined to being attached to profit, he committed the five terrible sins, and he was born in a bad destiny when his body broke up and his life ended. Thus, monks, profit is a grave thing that causes people not to find the place of safety.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567a29'>「是故，諸比丘，以生利養心，便當捨離。 若未生者，勿興染心。 如是，諸比丘，當作是學。」</td>
+    <td id='p5'>5. “Therefore, monks, thoughts of profit that have arisen must be abandoned. If they have yet to arise, then don’t create anymore thoughts obsessed with it. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567b2'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p6'>6. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “How is it, monks? Does anyone see Devadatta’s[\[3\]](#n3){:#ref3} teaching as clean? Still, Devadatta’s evil is quite grave, and he’ll get a punishment for an eon[\[4\]](#n4){:#ref4}, which cannot be cured. I do not see a thread’s breadth of goodness in my Dharma that someone could describe of him. Because of this, I now say that the source of Devadatta’s punishment cannot be cured.
-{:#p2}
+<hr/>
 
-3\. “He’s like a man who fell into a deep latrine. His whole body was submerged in it, and nowhere is he clean. Someone comes along to save his life and put him somewhere clean. Looking all around the sides of the latrine and that man, would they see a clean place? [The man asks,] ‘I’d like to grab something and pull myself out.’ But after looking over that place where nothing is clean for something the man could grab, they would give up and leave.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Thus, monks, do I regard that fool Devadatta. I do not see a thread’s breadth of goodness that someone could describe of him. He’ll get a punishment for an eon that cannot be cured. Why is that? Devadatta was focused on foolishness. Inclined to being attached to profit, he committed the five terrible sins, and he was born in a bad destiny when his body broke up and his life ended. Thus, monks, profit is a grave thing that causes people not to find the place of safety.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0567a14" target="_blank">T125.2.567a14-b3</a>. While I’ve not found a direct parallel to this <em>sūtra</em>, it should be noted that <a href="https://suttacentral.net/sn17.31" target="_blank">SN 17.31-36</a> share the same theme of Devadattva’s downfall being rooted in a desire for profit, but they include different metaphors to illustrate the point. Here, the Buddha’s declaration of Devadatta’s fate leads to an encounter with one of his supporters in the next <em>sūtra</em>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>the Squirrels’ Bamboo Park</em>. C. 迦蘭陀竹園 (EMC. kă-lan-da = G. <em>Kalanda</em> + trans. 竹 = bamboo, 園 = park). P/S. <em>kalandaka</em> means “squirrel.” This park was apparently a place where squirrels were given offerings of food. A legend explained this with the story of a king who was saved from a poisonous snake while he was napping in the forest when a squirrel’s warning woke him. Assuming that the squirrel was a tree spirit, the king decreed that the squirrels be given offerings in thanks.</p>
+<p><em>Rājagṛha</em>. C. 羅閲城 (EMC. la-yiuɛt = G. \*Raya[gaha] + trans. 城 = city). P. Rājagaha, S. Rājagṛha. In G., <em>-j-</em> typically weakened to <em>-y-</em>, and there were no long vowels. The translit. appears abbreviated, or perhaps S. <em>gṛha</em> was trans. loosely as “city.” [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Devadatta</em>. C. 提婆達兜 (EMC. dei-bua-dat-təu = G. <em>devadato</em>). Devadatta was a monk who attempted to create a schism in the Saṅgha and murder the Buddha. As a result, he figured prominently as an irredeemable villain in early Buddhist sources. For more about him, see Devadatta’s <a href="https://www.palikanon.com/english/pali_names/d/devadatta.htm" target="_blank">entry</a> in the <a href="https://www.palikanon.com/english/pali_names/dic_idx.html" target="_blank"><strong>Buddhist Dictionary of Pali Proper Names</strong></a>. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>for an eon</em>. C. 經劫. The next <em>sūtra</em> specifies that it was one eon. Here, it’s unclear whether “eon” (C. 劫, S. <em>kalpa</em>) is singular or plural, but I assume the original passages were in agreement. [<a href="#ref4">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. “Therefore, monks, thoughts of profit that have arisen must be abandoned. If they have yet to arise, then don’t create anymore thoughts obsessed with it. Thus, monks, you should train yourselves.”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 7 May 2023</p>
 
-6\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p6}
-
----
-
-### Notes
-
-1. {:#n1} While I’ve not found a direct parallel to this <em>sūtra</em>, it should be noted that <a href="https://suttacentral.net/sn17.31" target="_blank">SN 17.31-36</a> share the same theme of Devadattva’s downfall being rooted in a desire for profit, but they include different metaphors to illustrate the point. Here, the Buddha’s declaration of Devadatta’s fate leads to an encounter with one of his supporters in the next <em>sūtra</em>. [\[back\]](#ref1)
-2. {:#n2} <em>the Squirrels’ Bamboo Park</em>. C. 迦蘭陀竹園 (EMC. kă-lan-da = G. <em>Kalanda</em> + trans. 竹 = bamboo, 園 = park). P/S. <em>kalandaka</em> means “squirrel.” This park was apparently a place where squirrels were given offerings of food. A legend explained this with the story of a king who was saved from a poisonous snake while he was napping in the forest when a squirrel’s warning woke him. Assuming that the squirrel was a tree spirit, the king decreed that the squirrels be given offerings in thanks.<br/>
-<em>Rājagṛha</em>. C. 羅閲城 (EMC. la-yiuɛt = G. *Raya[gaha] + trans. 城 = city). P. Rājagaha, S. Rājagṛha. In G., <em>-j-</em> typically weakened to <em>-y-</em>, and there were no long vowels. The translit. appears abbreviated, or perhaps S. <em>gṛha</em> was trans. loosely as “city.” [\[back\]](#ref2)
-3. {:#n3} <em>Devadatta</em>. C. 提婆達兜 (EMC. dei-bua-dat-təu = G. <em>devadato</em>). Devadatta was a monk who attempted to create a schism in the Saṅgha and murder the Buddha. As a result, he figured prominently as an irredeemable villain in early Buddhist sources. For more about him, see Devadatta’s <a href="https://www.palikanon.com/english/pali_names/d/devadatta.htm" target="_blank">entry</a> in the <a href="https://www.palikanon.com/english/pali_names/dic_idx.html" target="_blank"><strong>Buddhist Dictionary of Pali Proper Names</strong></a>. [\[back\]](#ref3)
-4. {:#n4} <em>for an eon</em>. C. 經劫. The next <em>sūtra</em> specifies that it was one eon. Here, it’s unclear whether “eon” (C. 劫, S. <em>kalpa</em>) is singular or plural, but I assume the original passages were in agreement. [\[back\]](#ref4)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 07 May 2023
-{: .revised}
-
----
+<hr/>
