--- a/01_agama/ekottarika/11/EA_11_10.md
+++ b/01_agama/ekottarika/11/EA_11_10.md
@@ -1,104 +1,156 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 11. The Non-Returner | 10. Devadatta (2)'
+title: 'The Numerical Discourses | Chapter 11: The Non-Returner | 10. Devadatta (2)'
 type: kramdown
 base: ../../../
 previous: EA_11_09.html
 next: ../12/EA_12_01.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 11: The Non-Returner
-### 10. Devadatta (2)
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 11: The Non-Returner</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the Squirrels’ Bamboo Park of Rājagṛha. He was accompanied by a great assembly of five hundred monks.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一〇) 提婆達兜</th>
+  <th class='en'>10. Devadatta (2)</th>
+  <tr>
+    <td class='ch' title='T125.2.567b4'>聞如是： 一時，佛在羅閲城、迦蘭陀竹園所。 與大比丘眾五百人倶。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Squirrels’ Bamboo Park of Rājagṛha. He was accompanied by a great assembly of five hundred monks.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567b5'>爾時，有一比丘聞如來記別： 「調達受罪一劫，不可療治。」 時，彼比丘便至尊者阿難所，共相問訊已，在一面坐。 爾時，彼比丘問阿難曰： 「云何阿難？ 如來盡觀提婆達兜原本已，然後記別受罪一劫，不可療治乎？ 頗有所由可得而記耶？」</td>
+    <td id='p2'>2. At the time, there was a monk who heard the Tathāgata predict: “Devadatta will receive a punishment for an eon that cannot be cured.”<sup id="ref2"><a href="#n2">2</a></sup> That monk then went to Venerable Ānanda, exchanged greetings with him, and sat to one side. The monk then asked Ānanda, “How is it, Ānanda? Did the Tathāgata examine all of Devadatta’s past before predicting this incurable punishment that he’ll receive for an eon? Or did he derive this prediction from another source?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567b11'>時，阿難告曰： 「如來所説終不虚設。 身口所行而無有異。 如來真實記提婆達兜別受罪深重當經一劫，不可療治。」</td>
+    <td id='p3'>3. Ānanda then told him, “What the Tathāgata says is never false. There’s no difference between what he does physically or verbally. The Tathāgata truly predicted how Devadatta will receive a grave punishment for an eon that cannot be cured.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567b13'>爾時，尊者阿難即從坐起，至世尊所。 頭面禮足，在一面住。 爾時，阿難白世尊曰： 「有一比丘來至我所。而作是説： 『云何阿難？ 如來盡觀提婆達兜原本已，然後記別受罪一劫，不可療治乎？ 頗有因縁可得記別耶？』 作是語已各自捨去。」</td>
+    <td id='p4'>4. Venerable Ānanda then rose from his seat and went to the Bhagavān. He bowed his head at the Buddha’s feet and stood to one side. Ānanda then said to the Bhagavān, “There was a monk who came to me and said: ‘How is it, Ānanda? Did the Tathāgata examine all of Devadatta’s past before predicting this incurable punishment that he’ll receive for an eon? Or did he derive this prediction from another source?’ After discussing it, we each took our leave.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567b19'>世尊告曰： 「彼比丘者必晩暮學出家，未久方來至我法中耳。 如來所説終不虚妄。 云何於中復起猶豫？」</td>
+    <td id='p5'>5. The Bhagavān told him, “That’s sure to be a monk who was a latecomer to the training when he left home;<sup id="ref3"><a href="#n3">3</a></sup> it just hasn’t been long since he came to my teaching. What the Tathāgata says is never false. How could he be unsure about it?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567b21'>爾時，世尊告阿難曰： 「汝往至彼語比丘言： 『如來呼卿。』」</td>
+    <td id='p6'>6. The Bhagavān then said to Ānanda, “Go and tell that monk, ‘The Tathāgata has summoned you.’”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567b23'>阿難對曰： 「如是，世尊。」 是時，阿難受世尊教，便往至彼比丘所。 到已，語彼比丘曰： 「如來呼卿。」</td>
+    <td id='p7'>7. Ānanda replied, “Yes, Bhagavān.” Ānanda then accepted the Bhagavān’s instruction and went to that monk. Arriving there, he said to that monk, “The Bhagavān has summoned you.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567b25'>彼比丘對曰： 「如是，尊者。」 爾時，彼比丘便嚴衣服，共阿難至世尊所。 到已，禮世尊足，在一面坐。</td>
+    <td id='p8'>8. That monk replied, “Yes, Venerable.” The monk then got dressed and went with Ānanda to see the Bhagavān. Upon arriving, he bowed his head at the Bhagavān’s feet and sat to one side.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567b27'>爾時，世尊告彼比丘： 「云何愚人？ 汝不信如來所説乎？ 如來所教無有虚妄。 汝今乃欲求如來虚妄？」</td>
+    <td id='p9'>9. The Bhagavān then asked that monk, “How is it, foolish man? Do you not believe what the Tathāgata says? What the Tathāgata says is never false. Are you trying to find something false about the Tathāgata?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567b29'>時，彼比丘白世尊曰： 「提婆達兜比丘者有大神力，有大威勢。 云何世尊記彼一劫受罪重耶？」
+</td>
+    <td id='p10'>10. That monk then said to the Bhagavān, “The monk Devadatta possessed great spiritual power and great authority. How could the Bhagavān predict that he’ll be punished so severely for an eon?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567c3'>佛告比丘曰： 「護汝口語！ 勿於長夜受苦無量！」</td>
+    <td id='p11'>11. The Buddha told the monk, “Be careful what you say! Don’t spend a long time experiencing measureless suffering!”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567c4'>爾時，世尊便説此偈：</td>
+    <td id='p12'>12. The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.567c5'><ul class='verse'>
+    <li class='ch'>「遊禪世俗通，<br/>
+    至竟無解脫。<br/>
+    不造滅盡跡，<br/>
+    復還墮地獄。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Traversing the dhyānas and worldly understanding,<br/>
+    One will lack liberation at the end.<br/>
+    Not taking the steps to complete cessation,<br/>
+    One falls back into Hell.</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.567c7'>「若使我當見提婆達兜身有毫釐之善法者，我終不記彼提婆達兜受罪一劫，不可療治。 是故，愚人，我不見提婆達兜有毫釐之善法。 以是故，記彼提婆達兜受罪一劫，不可療治。</td>
+    <td id='p13'>13. “If I would see that Devadatta had a hair’s breadth of goodness, I’d never predict that he’ll receive a punishment for an eon that cannot be cured. Therefore, foolish man, I don’t see that Devadatta has a hair’s breadth of goodness. Because of that, I predicted that Devadatta will receive a punishment for an eon that cannot be cured.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567c11'>「所以然者？ 提婆達兜愚癡、貪著利養。 起染著心，作五逆惡。 身壞命終，入地獄中。 所以然者？ 利養心重敗人善本，令人不到安隱之處。</td>
+    <td id='p14'>14. “Why is that? Devadatta was foolish and greedy for profit. He became obsessed, and then he committed the five terrible sins. When his body broke up and his life ended, he went to Hell. Why is that? Thoughts of profit seriously ruin a person’s roots of goodness and prevent them from reaching the place of safety.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567c14'>「是故，諸比丘，設有利養心起便當求滅。 若不有心勿興想著。 如是，諸比丘，當作是學。」</td>
+    <td id='p15'>15. “Therefore, monks, when thoughts of profit arise, one must seek their cessation. If one doesn’t have these thoughts, then they shouldn’t create these obsessive ideas. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567c16'>爾時，彼比丘從坐起，整衣服，禮世尊足，白世尊曰： 「今自悔過。 唯願垂恕。 愚癡所致造不善行。 如來所説無有二言，然我愚癡起猶豫想。 唯願，世尊，受我悔過，改往修來。」 乃至再三。</td>
+    <td id='p16'>16. That monk then rose from his seat, adjusted his robes, bowed at the Bhagavān’s feet, and said, “Now, I apologize for this. Please forgive me! I was being foolish and did something unskillful. The Tathāgata’s teaching doesn’t have any duplicity, but I was a fool who had such ideas as this. Please, Bhagavān, accept my apology and restore me so I may continue my cultivation!” He repeated this three times.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567c20'>世尊告曰： 「善哉，比丘！ 悔汝所念，恕汝不及。 莫於如來興猶豫想。 今，受汝悔過。 後更莫作。」 乃至三四。</td>
+    <td id='p17'>17. The Bhagavān told him, “Good, monk! You are sorry for that thought, but that isn’t enough for forgiveness. Don’t produce such ideas about the Tathāgata. Now, I accept your apology. Don’t let it happen again.” He said this three times.<sup id="ref4"><a href="#n4">4</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.567c23'>爾時，世尊便説此偈：</td>
+    <td id='p18'>18. The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.567c24'><ul class='verse'>
+    <li class='ch'>「設有作重罪，<br/>
+    悔過更不犯，<br/>
+    此人應禁戒<br/>
+    拔其罪根原。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“If someone commits a serious misdeed,<br/>
+    And they apologize and don’t do it again,<br/>
+    This person should observe the precepts<br/>
+    And root out the source of that misdeed.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.567c26'>爾時，彼比丘及四部眾聞佛所説歡喜，奉行。</td>
+    <td id='p19'>19. When that monk and the fourfold saṅgha heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+<tr>
+  <td class='ch' title='t125.2.567c27'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='T125.2.567c27'><ul class='verse'>
+    <li class='ch'>四種阿那含，<br/>
+    二心及二食，<br/>
+    婆達二契經，<br/>
+    智者當覺知。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Four kinds of non-returning,<br/>
+    Two on heart, two on alms,<br/>
+    And two <em>sūtra</em>s about Devadatta,<br/>
+    Which the wise ought to know.</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. At the time, there was a monk who heard the Tathāgata predict: “Devadatta will receive a punishment for an eon that cannot be cured.”[\[2\]](#n2){:#ref2} That monk then went to Venerable Ānanda, exchanged greetings with him, and sat to one side. The monk then asked Ānanda, “How is it, Ānanda? Did the Tathāgata examine all of Devadatta’s past before predicting this incurable punishment that he’ll receive for an eon? Or did he derive this prediction from another source?”
-{:#p2}
+<hr/>
 
-3\. Ānanda then told him, “What the Tathāgata says is never false. There’s no difference between what he does physically or verbally. The Tathāgata truly predicted how Devadatta will receive a grave punishment for an eon that cannot be cured.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. Venerable Ānanda then rose from his seat and went to the Bhagavān. He bowed his head at the Buddha’s feet and stood to one side. Ānanda then said to the Bhagavān, “There was a monk who came to me and said: ‘How is it, Ānanda? Did the Tathāgata examine all of Devadatta’s past before predicting this incurable punishment that he’ll receive for an eon? Or did he derive this prediction from another source?’ After discussing it, we each took our leave.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0567b04" target="_blank">T125.2.567b04-c28</a>. This and the previous <em>sūtra</em> fit the basic theme of <a href="https://suttacentral.net/sn17.31" target="_blank">SN 17.31-36</a>, but they don’t match any of those <em>sutta</em>s directly. This <em>sūtra</em> relates events that follow the previous <em>sūtra</em>. See the notes to the previous <em>sūtra</em> from some comments that apply to this one as well. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Devadatta</em>. C. 調達 (EMC. deu-dat = G. de[va]dat[o]). The translator used 婆達 (EMC. bua-dat = G. [de]vadat[o]) as an abbreviation of Devadatta’s name in the <em>uddāna</em> verse at the end of this chapter. 調達 appears to be a similar abbreviation, but here it’s the first and third syllable rather than the second and third. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>latercomer to the training</em>. C. 晩暮學. The lit. meaning is “sunset training.” Presumably, it was an idiom for becoming a monk late in life. This would imply that, as a result, the monk was set in his ways or views and more likely to object. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>three times</em>. The Taisho reads: “Up to three or four times” (乃至三四). I assume this is a typo for “repeated three times” (乃至再三) since the monk repeated his apologize thrice. [<a href="#ref4">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. The Bhagavān told him, “That’s sure to be a monk who was a latecomer to the training when he left home;[\[3\]](#n3){:#ref3} it just hasn’t been long since he came to my teaching. What the Tathāgata says is never false. How could he be unsure about it?”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 7 May 2023</p>
 
-6\. The Bhagavān then said to Ānanda, “Go and tell that monk, ‘The Tathāgata has summoned you.’”
-{:#p6}
-
-7\. Ānanda replied, “Yes, Bhagavān.” Ānanda then accepted the Bhagavān’s instruction and went to that monk. Arriving there, he said to that monk, “The Bhagavān has summoned you.”
-{:#p7}
-
-8\. That monk replied, “Yes, Venerable.” The monk then got dressed and went with Ānanda to see the Bhagavān. Upon arriving, he bowed his head at the Bhagavān’s feet and sat to one side.
-{:#p8}
-
-9\. The Bhagavān then asked that monk, “How is it, foolish man? Do you not believe what the Tathāgata says? What the Tathāgata says is never false. Are you trying to find something false about the Tathāgata?”
-{:#p9}
-
-10\. That monk then said to the Bhagavān, “The monk Devadatta possessed great spiritual power and great authority. How could the Bhagavān predict that he’ll be punished so severely for an eon?”
-{:#p10}
-
-11\. The Buddha told the monk, “Be careful what you say! Don’t spend a long time experiencing measureless suffering!”
-{:#p11}
-
-12\. The Bhagavān then spoke in verse:
-{:#p12}
-
-* {:.verse}“Traversing the dhyānas and worldly understanding,\\
-One will lack liberation at the end.\\
-Not taking the steps to complete cessation,\\
-One falls back into Hell.
-
-13\. “If I would see that Devadatta had a hair’s breadth of goodness, I’d never predict that he’ll receive a punishment for an eon that cannot be cured. Therefore, foolish man, I don’t see that Devadatta has a hair’s breadth of goodness. Because of that, I predicted that Devadatta will receive a punishment for an eon that cannot be cured.
-{:#p13}
-
-14\. “Why is that? Devadatta was foolish and greedy for profit. He became obsessed, and then he committed the five terrible sins. When his body broke up and his life ended, he went to Hell. Why is that? Thoughts of profit seriously ruin a person’s roots of goodness and prevent them from reaching the place of safety.
-{:#p14}
-
-15\. “Therefore, monks, when thoughts of profit arise, one must seek their cessation. If one doesn’t have these thoughts, then they shouldn’t create these obsessive ideas. Thus, monks, you should train yourselves.”
-{:#p15}
-
-16\. That monk then rose from his seat, adjusted his robes, bowed at the Bhagavān’s feet, and said, “Now, I apologize for this. Please forgive me! I was being foolish and did something unskillful. The Tathāgata’s teaching doesn’t have any duplicity, but I was a fool who had such ideas as this. Please, Bhagavān, accept my apology and restore me so I may continue my cultivation!” He repeated this three times.
-{:#p16}
-
-17\. The Bhagavān told him, “Good, monk! You are sorry for that thought, but that isn’t enough for forgiveness. Don’t produce such ideas about the Tathāgata. Now, I accept your apology. Don’t let it happen again.” He said this three times.[\[4\]](#n4){:#ref4}
-{:#p17}
-
-18\. The Bhagavān then spoke in verse:
-{:#p18}
-
-* {:.verse}“If someone commits a serious misdeed,\\
-And they apologize and don’t do it again,\\
-This person should observe the precepts\\
-And root out the source of that misdeed.”
-
-19\. When that monks and the fourfold saṅgha heard what the Buddha taught, they rejoiced and approved.
-{:#p19}
-
-##### Summary Verse
-
-* {:.verse}Four kinds of non-returning,\\
-Two on heart, two on alms,\\
-And two <em>sūtra</em>s about Devadatta,\\
-Which the wise ought to know.
-
----
-
-### Notes
-
-1. {:#n1} This and the previous <em>sūtra</em> fit the basic theme of <a href="https://suttacentral.net/sn17.31" target="_blank">SN 17.31-36</a>, but they don’t match any of those <em>sutta</em>s directly. This <em>sūtra</em> relates events that follow the previous <em>sūtra</em>. See the notes to the previous <em>sūtra</em> from some comments that apply to this one as well. [\[back\]](#ref1)
-2. {:#n2} <em>Devadatta</em>. C. 調達 (EMC. deu-dat = G. de[va]dat[o]). The translator used 婆達 (EMC. bua-dat = G. [de]vadat[o]) as an abbreviation of Devadatta’s name in the <em>uddāna</em> verse at the end of this chapter. 調達 appears to be a similar abbreviation, but here it’s the first and third syllable rather than the second and third. [\[back\]](#ref2)
-3. {:#n3} <em>latercomer to the training</em>. C. 晩暮學. The lit. meaning is “sunset training.” Presumably, it was an idiom for becoming a monk late in life. This would imply that, as a result, the monk was set in his ways or views and more likely to object. [\[back\]](#ref3)
-4. {:#n4} <em>three times</em>. The Taisho reads: “Up to three or four times” (乃至三四). I assume this is a typo for “repeated three times” (乃至再三) since the monk repeated his apologize thrice. [\[back\]](#ref4)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 07 May 2023
-{: .revised}
-
----
+<hr/>
