--- a/01_agama/ekottarika/12/EA_12_02.md
+++ b/01_agama/ekottarika/12/EA_12_02.md
@@ -1,30 +1,42 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 12. The Single-Entry Path | 2. Spitefulness'
+title: 'The Numerical Discourses | Chapter 12: The Single-Entry Path | 2. Spitefulness'
 type: kramdown
 base: ../../../
 previous: EA_12_01.html
 next: EA_12_03.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 12: The Single-Entry Path
-### 2. Spitefulness
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 12: The Single-Entry Path</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(二) 憎嫉</th>
+  <th class='en'>2. Spitefulness</th>
+  <tr>
+    <td class='ch' title='T125.2.569b13'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569b14'>爾時，世尊告諸比丘： 「我於是中不見一法速磨滅者憎嫉梵行。 是故，諸比丘，當修行慈忍。 身行慈，口行慈，意行慈。 如是，諸比丘，當作是學。」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see a single thing here that so quickly wears something away as spitefulness does the religious life. Therefore, monks, you should cultivate kindness and acceptance. Be kind in your physical conduct, kind in your verbal conduct, and kind in your mental conduct. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569b17'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p3'>3. When the monks who heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t see a single thing here that so quickly wears something away as spitefulness does the religious life. Therefore, monks, you should cultivate kindness and acceptance. Be kind in your physical conduct, kind in your verbal conduct, and kind in your mental conduct. Thus, monks, you should train yourselves.”
-{:#p2}
+<hr/>
 
-3\. When the monks who heard what the Buddha taught, they rejoiced and approved.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
----
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0569b13" target="_blank">T125.2.569b13-8</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-Translator: Charles Patton
-{: .translator}
-Last Revised: 29 June 2023
-{: .revised}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 29 June 2023</p>
 
----
+<hr/>
