--- a/01_agama/ekottarika/12/EA_12_03.md
+++ b/01_agama/ekottarika/12/EA_12_03.md
@@ -1,33 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 12. The Single-Entry Path | 3. The Most Honored'
+title: 'The Numerical Discourses | Chapter 12: The Single-Entry Path | 3. The Most Honored'
 type: kramdown
 base: ../../../
 previous: EA_12_02.html
 next: EA_12_04.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 12: The Single-Entry Path
-### 3. The Most Honored
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 12: The Single-Entry Path</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(三)</th>
+  <th class='en'>3. The Most Honored</th>
+  <tr>
+    <td class='ch' title='T125.2.569b19'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569b20'>爾時，世尊告諸比丘： 「若有一人出現世時，諸天、人民，魔及魔天，沙門、婆羅門，最尊、最上、無與等者。 福田第一可事可敬。 云何為一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。 是謂一人出現世時，過諸天、人民，阿須倫、魔及魔天，沙門、婆羅門上，最尊、最上、無與等者。 福田第一可事可敬。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Suppose one person appears in the world who’s the most honored, supreme, and unmatched among gods and humans, Māra and demonic gods, and ascetics and priests. Their the best field of merit that can be served and honored. Who is that one person? It’s the Tathāgata, Arhat, and Completely Awakened One. When this one person appears in the world, he’s the most honored, supreme, and unmatched among gods, humans, asuras, Māra and demonic gods, and ascetics and priests. He’s the best field of merit that can be served and honored.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569b26'>「如是，諸比丘，常當供養如來。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, you should always support the Tathāgata. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569b27'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks who heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Suppose one person appears in the world who’s the most honored, supreme, and unmatched among gods and humans, Māra and demonic gods, and ascetics and priests. Their the best field of merit that can be served and honored. Who is that one person? It’s the Tathāgata, Arhat, and Completely Awakened One. When this one person appears in the world, he’s the most honored, supreme, and unmatched among gods, humans, asuras, Māra and demonic gods, and ascetics and priests. He’s the best field of merit that can be served and honored.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, you should always support the Tathāgata. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks who heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0569b19" target="_blank">T125.2.569b19-28</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 29 June 2023</p>
 
-Translator: Charles Patton
-{: .translator}
-Last Revised: 29 June 2023
-{: .revised}
-
----
+<hr/>
