--- a/01_agama/ekottarika/12/EA_12_05.md
+++ b/01_agama/ekottarika/12/EA_12_05.md
@@ -1,80 +1,99 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 12. The Single-Entry Path | 5. Praise and Slander'
+title: 'The Numerical Discourses | Chapter 12: The Single-Entry Path | 5. Praise and Slander'
 type: kramdown
 base: ../../../
 previous: EA_12_04.html
 next: EA_12_06.html
-
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 12: The Single-Entry Path
-### 5. Praise and Slander
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 12: The Single-Entry Path</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(五)</th>
+  <th class='en'>5. Praise and Slander</th>
+  <tr>
+    <td class='ch' title='T125.2.569c13'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569c14'>爾時，世尊告諸比丘： 「其有歎譽阿練若者，則為歎譽我已。 所以然者？ 我今恒自歎譽阿練若行。 其有誹謗阿練若者，則為誹謗我已。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Those who praise forest dwellers have praised me. Why is that? Because now I’m always praising forest dwellers. Those who slander forest dwellers then have slandered me.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569c17'>「其有歎説乞食，則為歎譽我已。 所以然者？ 我恒歎説能乞食者。 其有謗毀乞食，則為毀我已。</td>
+    <td id='p3'>3. “Those who praise soliciting alms have praised me. Why is that? I’m always praising those who solicit alms. Those who slander soliciting alms have slandered me.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569c19'>「其有歎説獨坐者，則為歎説我已。 所以然者？ 我恒歎説能獨坐者。 其有毀獨坐者，則為毀我已。</td>
+    <td id='p4'>4. “Those who praise sitting in solitude have praised me. Why is that? I’m always praising those who sit in solitude. Those who slander sitting in solitude have slandered me.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569c21'>「其有歎譽一坐一食者，則為歎譽我已。 所以然者？ 我恒歎譽一坐一食者。 其有毀者，則為毀我已。</td>
+    <td id='p5'>5. “Those who praise dwelling in one place for one sitting have praised me.<sup id="ref2"><a href="#n2">2</a></sup> Why is that? I’m always praising those who dwell in one place for one sitting. Those who slander dwelling in one place for one sitting have slandered me.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569c24'>「若有歎説坐樹下者，則為歎説我身，無異。 所以然者？ 我恒歎譽在樹下者。 若有毀彼在樹下者，則為毀我已。</td>
+    <td id='p6'>6. “If someone praises sitting under a tree, that’s no different than praising me. Why is that? I’m always praising those who sit under trees. If someone slanders someone for sitting under a tree, then they have slandered me.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569c26'>「其有歎説露坐者，則為歎説我已。 所以者何？ 我恒歎説露坐者。 其有毀辱露坐者，則毀辱我已。</td>
+    <td id='p7'>7. “Those who praise sitting on open ground have praised me. Why is that? I’m always praising those who sit on open ground. Those who slander someone for sitting on open ground have slandered me.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569c29'>「其有歎説空閑處者，則為歎説我已。 所以者何？ 我恒歎説空閑處者。 其有毀辱空閑處者，則為毀辱我已。</td>
+    <td id='p8'>8. “Those who praise living in uninhabited places have praised me. Why is that? I’m always praising those who live in uninhabited places. Those who slander someone for living in an uninhabited place have slandered me.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570a2'>「其有歎説著五納衣者，則為歎説我已。 所以者何？ 我恒歎説著五納衣者。 其有毀辱著五納衣者，則為毀辱我已。</td>
+    <td id='p9'>9. “Those who praise wearing the five-piece robe have praised me. Why is that? I’m always praising those who wear five-piece robes. Those who slander someone for wearing the five-piece robe have slandered me.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570a5'>「其有歎説持三衣者，則為歎説我已。 何以故？ 我恒歎説持三衣者。 其有毀辱持三衣者，則為毀辱我已。</td>
+    <td id='p10'>10. “Those who praise keeping three garments have praised me. Why is that? I’m always praising those who keep three garments. Those who slander someone for keeping three garments have slandered me.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570a8'>「其有歎説在塚間坐者，則為歎説我已。 何以故？ 我恒歎説在塜間坐者。 其有毀辱在塚間坐者，則為毀辱我已。</td>
+    <td id='p11'>11. “Those who praise sitting in charnel grounds have praised me. Why is that? I’m always praising those who sit in charnel grounds. Those who slander someone for sitting in a charnel ground have slandered me.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570a10'>「其有歎一食者，則為歎説我已。 何以故？ 我恒歎説一食者。 其有毀辱一食者，則為毀辱我已。</td>
+    <td id='p12'>12. “Those who praise having a single meal have praised me. Why is that? I’m always praising those who take a single meal. Those who slander someone for taking a single meal have slandered me.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570a12'>「其有歎説日正中食者，則為歎説我已。 何以故？ 我恒歎説正中食者。 其有毀辱正中食者，則為毀辱我已。</td>
+    <td id='p13'>13. “Those who praise eating at midday have praised me. Why is that? I’m always praising those who eat at midday. Those who slander someone for eating at midday have slandered me.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570a15'>「其有歎説諸頭陀行者，則為歎説我已。 所以然者？ 我恒歎説諸頭陀行。 其有毀辱諸頭陀行者，則為毀辱我已。</td>
+    <td id='p14'>14. “Those who praise the ascetic practices have praised me. Why is that? I’m always praising the ascetic practices. Those who slander someone because of the ascetic practices have slandered me.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570a18'>「我今教諸比丘： 『當如大迦葉所行，無有漏失者。』 所以然者？ 迦葉比丘有此諸行。</td>
+    <td id='p15'>15. “Now, I teach the monks, ‘Someone should train like Mahākāśyapa and omit nothing.’ Why is that? These are the practices of the monk Kāśyapa.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570a20'>「是故，諸比丘，所學常當如大迦葉。 如是，比丘，當作是學。</td>
+    <td id='p16'>16. “Therefore, monks, always train the way Mahākāśyapa does. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570a21'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p17'>17. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Those who praise forest dwellers have praised me. Why is that? Because now I’m always praising forest dwellers. Those who slander forest dwellers then have slandered me.
-{:#p2}
+<hr/>
 
-3\. “Those who praise soliciting alms have praised me. Why is that? I’m always praising those who solicit alms. Those who slander soliciting alms have slandered me.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Those who praise sitting in solitude have praised me. Why is that? I’m always praising those who sit in solitude. Those who slander sitting in solitude have slandered me.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0569c13" target="_blank">T125.2.569c13-70a22</a>. Although this <em>sūtra</em> doesn’t appear to have a direct parallel, we do find similar material in SĀ 41.6 (1141), T100.116, and SN 16.5, where Kāśyapa says that he praises the ascetic practices. These are parallels to the next <em>sūtra</em>, EĀ 12.6, which doesn’t depict Kāśyapa as praising these things. Rather, he is praised for practicing them when the Buddha allows him to retire in his old age. The praising of the practices occurs instead here in the present <em>sūtra</em>, which mentions Kāśyapa at the end. It would appear that the Theravāda and Sarvāstivāda traditions may have combined elements of <em>sūtra</em>s like EĀ 12.5 and 12.6. The older <em>sūtra</em>s in those traditions would not have been identical to those here in the EĀ version, however, since their lists of the ascetic practices are different than the one we find here. It’s notable that a list of twelve ascetic practices similar to this one is found in the Mahīśāsaka Vinaya (cf. T1421.22.26a18), and there’s a short Mahāyāna <em>sūtra</em> on the subject (T783) that appears inspired by these early <em>sūtra</em>s. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>dwell in one place for one sitting</em>. C. 一坐一食. The next <em>sūtra</em>, which lists the same ascetic practices as found here, has 一處一坐 instead of 一坐一食 for this item, and it includes a brief gloss. This makes better sense given that one of the later items below is taking a single meal, which would seem to duplicate this one. I’ve decided to translate the version in EĀ 12.6. The uncorrected Taisho reading would be “taking a single meal in one sitting” (lit. “one-sitting single meal”). [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. “Those who praise dwelling in one place for one sitting have praised me.[\[2\]](#n2){:#ref2} Why is that? I’m always praising those who dwell in one place for one sitting. Those who slander dwelling in one place for one sitting have slandered me.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 29 June 2023</p>
 
-6\. “If someone praises sitting under a tree, that’s no different than praising me. Why is that? I’m always praising those who sit under trees. If someone slanders someone for sitting under a tree, then they have slandered me.
-{:#p6}
-
-7\. “Those who praise sitting on open ground have praised me. Why is that? I’m always praising those who sit on open ground. Those who slander someone for sitting on open ground have slandered me.
-{:#p7}
-
-8\. “Those who praise living in uninhabited places have praised me. Why is that? I’m always praising those who live in uninhabited places. Those who slander someone for living in an uninhabited place have slandered me.
-{:#p8}
-
-9\. “Those who praise wearing the five-piece robe have praised me. Why is that? I’m always praising those who wear five-piece robes. Those who slander someone for wearing the five-piece robe have slandered me.
-{:#p9}
-
-10\. “Those who praise keeping three garments have praised me. Why is that? I’m always praising those who keep three garments. Those who slander someone for keeping three garments have slandered me.
-{:#p10}
-
-11\. “Those who praise sitting in charnel grounds have praised me. Why is that? I’m always praising those who sit in charnel grounds. Those who slander someone for sitting in a charnel ground have slandered me.
-{:#p11}
-
-12\. “Those who praise having a single meal have praised me. Why is that? I’m always praising those who take a single meal. Those who slander someone for taking a single meal have slandered me.
-{:#p12}
-
-13\. “Those who praise eating at midday have praised me. Why is that? I’m always praising those who eat at midday. Those who slander someone for eating at midday have slandered me.
-{:#p13}
-
-14\. “Those who praise the ascetic practices have praised me. Why is that? I’m always praising the ascetic practices. Those who slander someone because of the ascetic practices have slandered me.
-{:#p14}
-
-15\. “Now, I teach the monks, ‘Someone should train like Mahākāśyapa and omit nothing.’ Why is that? These are the practices of the monk Kāśyapa.
-{:#p15}
-
-16\. “Therefore, monks, always train the way Mahākāśyapa does. Thus, monks, you should train yourselves.”
-{:#p16}
-
-17\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p17}
-
----
-
-### Notes
-
-1. {:#n1} Although this <em>sūtra</em> doesn’t appear to have a direct parallel, we do find similar material in SĀ 41.6 (1141), T100.116, and SN 16.5, where Kāśyapa says that he praises the ascetic practices. These are parallels to the next <em>sūtra</em>, EĀ 12.6, which doesn’t depict Kāśyapa as praising these things. Rather, he is praised for practicing them when the Buddha allows him to retire in his old age. The praising of the practices occurs instead here in the present <em>sūtra</em>, which mentions Kāśyapa at the end. It would appear that the Theravāda and Sarvāstivāda traditions may have combined elements of <em>sūtra</em>s like EĀ 12.5 and 12.6. The older <em>sūtra</em>s in those traditions would not have been identical to those here in the EĀ version, however, since their lists of the ascetic practices are different than the one we find here. It’s notable that a list of twelve ascetic practices similar to this one is found in the Mahīśāsaka Vinaya (cf. T1421.22.26a18), and there’s a short Mahāyāna <em>sūtra</em> on the subject (T783) that appears inspired by these early <em>sūtra</em>s. [\[back\]](#ref1)
-2. {:#n2} <em>dwell in one place for one sitting</em>. C. 一坐一食. The next <em>sūtra</em>, which lists the same ascetic practices as found here, has 一處一坐 instead of 一坐一食 for this item, and it includes a brief gloss. This makes better sense given that one of the later items below is taking a single meal, which would seem to duplicate this one. I’ve decided to translate the version in EĀ 12.6. The uncorrected Taisho reading would be “taking a single meal in one sitting” (lit. “one-sitting single meal”) [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 29 June 2023
-{: .revised}
-
----
+<hr/>
