--- a/01_agama/ekottarika/12/EA_12_06.md
+++ b/01_agama/ekottarika/12/EA_12_06.md
@@ -1,54 +1,66 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 12. The Single-Entry Path | 6. Senior Years'
+title: 'The Numerical Discourses | Chapter 12: The Single-Entry Path | 6. Senior Years'
 type: kramdown
 base: ../../../
 previous: EA_12_05.html
 next: EA_12_07.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 12: The Single-Entry Path
-### 6. Senior Years
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 12: The Single-Entry Path</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha. He was accompanied by a great assembly of five hundred monks.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(六)</th>
+  <th class='en'>6. Senior Years</th>
+  <tr>
+    <td class='ch' title='T125.2.570a23'>聞如是： 一時，佛在羅閲城、迦蘭陀竹園所。 與大比丘眾五百人倶。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha. He was accompanied by a great assembly of five hundred monks.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570a24'>爾時，尊者大迦葉住阿練若。 到時乞食，不擇貧富。 一處一坐，終不移易。 樹下、露坐、或空閑處。 著五納衣，或持三衣。 或在塚間。 或時一食，或正中食，或行頭陀，年高長大。</td>
+    <td id='p2'>2. At the time, Venerable Mahākāśyapa was living as a forest-dweller. When the time came, he solicited alms without distinguishing between the rich or the poor. He dwelled in one place for one sitting and never moved from it. He sat under trees, on open ground, or in uninhabited places. He wore the five-piece robe, and sometimes kept three garments. Sometimes, he stayed in charnel grounds. Sometimes, he took a single meal, sometimes he ate at midday, and sometimes he practiced the ascetic way, far into his senior years.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570a28'>爾時，尊者大迦葉食後，便詣一樹下，禪定。 禪定已，從坐起，整衣服，往至世尊所。</td>
+    <td id='p3'>3. After he ate, Venerable Mahākāśyapa went to meditate under a tree. After meditating, he rose from his seat, adjusted his robe, and went over to the Bhagavān.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570b1'>是時，世尊遙見迦葉來。世尊告曰： 「善來，迦葉！」 時，迦葉便至世尊所，頭面禮足，在一面坐。</td>
+    <td id='p4'>4. When he saw Kāśyapa coming from afar, the Bhagavān said, “Welcome, Kāśyapa!” Kāśyapa then went up to the Bhagavān, bowed his head at his feet, and sat to one side.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570b3'>世尊告曰： 「迦葉，汝今年高長，大志衰朽弊。 汝今可捨乞食⋯乃至⋯諸頭陀行。 亦可受諸長者請并受衣裳。」</td>
+    <td id='p5'>5. The Bhagavān then said, “Kāśyapa, you’re in your senior years now, and your ambition is flagging. You may abandon soliciting alms … practicing the ascetic way. You may accept the invitations and clothing offered by householders, too.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570b5'>迦葉對曰： 「我今不從如來教。 所以然者？ 若當如來，不成無上正真道者。 我則成辟支佛。 然彼辟支佛盡行阿練若。 到時乞食，不擇貧富。 一處一坐，終不移易。 樹下、露坐、或空閑處。 著五納衣，或持三衣。 或在塚間。 或時一食、或正中食、或行頭陀。 如今不敢捨本所習，更學餘行。」</td>
+    <td id='p6'>6. Kāśyapa replied, “I’m not going to accept this instruction from the Tathāgata. Why is that? If I do as the Tathāgata says, I won’t acheive the supreme and correct awakening. I would instead become a solitary buddha. Even so, all the solitary buddhas practice forest-dwelling. When the time comes, they solicit alms without distinguishing between the rich or the poor. They dwell in one place for one sitting and never move from it. They sit under trees, on open ground, or in uninhabited places. They wear the five-piece robe and keep three garments. Sometimes, they stay in charnel grounds.  Sometimes, they take a single meal, sometimes they eat at midday, and sometimes they practice the ascetic way. As I don’t dare abandon my original training, I’ll train in those other practices, too.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570b12'>世尊告曰： 「善哉，善哉！迦葉，多所饒益度人無量、廣，及一切天人得度。 所以然者？ 若，迦葉，此頭陀行在世者，我法亦當久在於世。 設法在世，益増天道，三惡道便減。 亦成須陀洹、斯陀含、阿那含，三乘之道皆存於世。</td>
+    <td id='p7'>7. The Bhagavān told him, “Good, Kāśyapa! Good! The many benefits of a liberated person are measureless and broad, and then all the gods and people can be liberated. Why is that? Kāśyapa, if these ascetic practices exist in the world, then my Dharma will also exist in the world for a long time. If the Dharma exists in the world, it will bless others with the road to Heaven, and the three bad destinies will dwindle. People will become stream-enterers, once-returners, and non-returners, and the path of the three vehicles will survive in the world.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570b17'>「諸比丘，所學皆當如迦葉所習。 如是，諸比丘，當作是學。」</td>
+    <td id='p8'>8. “Therefore, monks, you should learn the way Kāśyapa trains. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570b18'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p9'>9. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. At the time, Venerable Mahākāśyapa was living as a forest-dweller. When the time came, he solicited alms without distinguishing between the rich or the poor. He dwelled in one place for one sitting and never moved from it. He sat under trees, on open ground, or in uninhabited places. He wore the five-piece robe, and sometimes kept three garments. Sometimes, he stayed in charnel grounds. Sometimes, he took a single meal, sometimes he ate at midday, and sometimes he practiced the ascetic way, far into his senior years.
-{:#p2}
+<hr/>
 
-3\. After he ate, Venerable Mahākāśyapa went to meditate under a tree. After meditating, he rose from his seat, adjusted his robe, and went over to the Bhagavān.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When he saw Kāśyapa coming from afar, the Bhagavān said, “Welcome, Kāśyapa!” Kāśyapa then went up to the Bhagavān, bowed his head at his feet, and sat to one side.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0570a23" target="_blank">T125.2.570a23-b19</a>. This <em>sūtra</em> is directly parallel to <a href="https://suttacentral.net/sn16.5" target="_blank">SN 16.5</a>, SĀ 41.6 (1141), and T100.116. The most notable difference here is that it presents twelve ascetic practices as a training regimen practiced by <em>pratyeka buddha</em>s. There’s also mention of the three vehicles. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. The Bhagavan then said, “Kāśyapa, you’re in your senior years now, and your ambition is flagging. You may abandon soliciting alms … practicing the ascetic way. You may accept the invitations and clothing offered by householders, too.”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 30 June 2023</p>
 
-6\. Kāśyapa replied, “I’m not going to accept this instruction from the Tathāgata. Why is that? If I do as the Tathāgata says, I won’t acheive the supreme and correct awakening. I would instead become a solitary buddha. Even so, all the solitary buddhas practice forest-dwelling. When the time comes, they solicit alms without distinguishing between the rich or the poor. They dwell in one place for one sitting and never move from it. They sit under trees, on open ground, or in uninhabited places. They wear the five-piece robe and keep three garments. Sometimes, they stay in charnel grounds.  Sometimes, they take a single meal, sometimes they eat at midday, and sometimes they practice the ascetic way. As I don’t dare abandon my original training, I’ll train in those other practices, too.”
-{:#p6}
-
-7\. The Bhagavān told him, “Good, Kāśyapa! Good! The many benefits of a liberated person are measureless and broad, and then all the gods and people can be liberated. Why is that? Kāśyapa, if these ascetic practices exist in the world, then my Dharma will also exist in the world for a long time. If the Dharma exists in the world, it will bless others with the road to Heaven, and the three bad destinies will dwindle. People will become stream-enterers, once-returners, and non-returners, and the path of the three vehicles will survive in the world.
-{:#p7}
-
-8\. “Therefore, monks, you should learn the way Kāśyapa trains. Thus, monks, you should train yourselves.”
-{:#p8}
-
-9\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p9}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is directly parallel to <a href="https://suttacentral.net/sn16.5" target="_blank">SN 16.5</a>, SĀ 41.6 (1141), and T100.116. The most notable difference here is that it presents twelve ascetic practices as a training regimen practiced by <em>pratyeka buddha</em>s. There’s also mention of the three vehicles. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 June 2023
-{: .revised}
-
----
+<hr/>
