--- a/01_agama/ekottarika/12/EA_12_07.md
+++ b/01_agama/ekottarika/12/EA_12_07.md
@@ -1,47 +1,55 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 12. The Single-Entry Path | 7. Devadatta'
+title: 'The Numerical Discourses | Chapter 12: The Single-Entry Path | 7. Devadatta'
 type: kramdown
 base: ../../../
 previous: EA_12_06.html
 next: EA_12_08.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 12: The Single-Entry Path
-### 7. Devadatta
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 12: The Single-Entry Path</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(七)</th>
+  <th class='en'>7. Devadatta</th>
+  <tr>
+    <td class='ch' title='T125.2.570b20'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570b21'>爾時，世尊告諸比丘： 「利養甚重令人不得至無上正真之道。 所以然者？</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Profit is a very serious thing that prevents people from attaining the supreme and correct awakening. Why is that?</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570b22'>「諸比丘，彼提婆達兜愚人取彼王子婆羅留支五百釜食供養。 設彼不與者，提婆達兜愚人終不作此惡。 以婆羅留支王子五百釜食日來供養，是故提婆達兜起五逆惡。 身壞命終，生摩訶阿鼻地獄15中。</td>
+    <td id='p3'>3. “Monks, that fool Devadattva took Prince *Pararuci’s<sup id="ref2"><a href="#n2">2</a></sup> offering of five hundred kettles of food. If he hadn’t given it to him, that fool Devadattva would have never done any evil. But the day came when Prince *Pararuci gave him five hundred kettles of food, and then Devadatta committed the five terrible sins. When his life ended, he was born in the Great Avici Hell.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570b27'>「以此方便，當知利養甚重令人不得至無上正真之道。 若未生利養心，不應生，已生當滅之。 如是，諸比丘當作是學。」</td>
+    <td id='p4'>4. “From this, you should know that profit is a very serious thing that prevents people from attaining the supreme and correct awakening. [Therefore, monks,] you shouldn’t think of profit if such thoughts have yet to arise, and you should cease such thoughts if they do arise. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570c1'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Profit is a very serious thing that prevents people from attaining the supreme and correct awakening. Why is that?
-{:#p2}
+<hr/>
 
-3\. “Monks, that fool Devadattva took Prince \*Pararuci’s[\[2\]](#n2){:#ref2} offering of five hundred kettles of food. If he hadn’t given it to him, that fool Devadattva would have never done any evil. But the day came when Prince \*Pararuci gave him five hundred kettles of food, and then Devadatta committed the five terrible sins. When his life ended, he was born in the Great Avici Hell.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “From this, you should know that profit is a very serious thing that prevents people from attaining the supreme and correct awakening. [Therefore, monks,] you shouldn’t think of profit if such thoughts have yet to arise, and you should cease such thoughts if they do arise. Thus, monks, you should train yourselves.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0570b20" target="_blank">T125.2.570b20-c1</a>. This <em>sūtra</em> contains a couple details that refer to the story of Devadatta receiving patronage from Ajātaśatru, which is found in numerous sources. The most complete accounts are found in the various Vinayas (e.g., in Theravāda <a href="https://suttacentral.net/pli-tv-kd17/en/brahmali" target="_blank">Vin Kd 17</a>). There are also a few <em>sūtra</em>s that share similar references, such as <a href="https://suttacentral.net/sn17.35" target="_blank">SN 17.35-36</a>, SĀ 17.3 (1064), T100.3, and <a href="https://suttacentral.net/an4.68" target="_blank">AN 4.68</a>. They all are warnings to the monks to guard themselves against the greed for support that can cause a mendicant to become ambitious and corrupt like Devadatta.</p>
+<p>The most significant detail in this <em>sūtra</em> is that it calls Ajātaśatru by another name, which might harken back to a tradition that recalled his personal name. C. sources, however, understood this alternate name to be an epithet connected to the usurpation of his father’s throne. See the notes below for more on this. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Pararuci</em>. C. 婆羅留支 (EMC. bua-la-lɪəu-tʃɪĕ = G. <em>*pararuci</em>?). This was clearly a transliteration of an alternate name for S. Ajātaśatru (lit. “unborn enemy”), given the details that we know about the story of Devadatta.</p>
+<p>Chinese sources give us some information about this translit. The <strong>一切經音義</strong> lists it as another name for S. Ajātaśatru (阿闍世) that means “supreme pleasure” (勝樂), “good sight” (善見) or “missing finger” (折指) (cf. T2128.54.464c3 and 479c12). The <strong>翻梵語</strong> agrees that it means “supreme pleasure” (cf. T2130.54.1019c22). The <strong>翻譯名義集</strong> elaborates on the readings of “missing finger,” “supreme pleasure,” and “good sight.” It says that the name lit. means “missing finger,” referring to Ajātaśatru losing only a finger when he seized the throne, which made him very happy; and the palace guards considered it “good to see” (cf. T2131.54.1094c15-17). In his commentary on the <em>Visualization of Amitāyus Sūtra</em>, Zhiyi also mentions 婆羅留支 as another name of Ajātaśatru that means “missing finger” (折指) (cf. T1750.37.190a1).</p>
+<p>S. <em>*pararuci</em>, which could mean “supreme pleasure,” would be a straightforward reading of 婆羅留支. However, “missing” could be S. <em>parāpat</em>, and “finger” could be <em>aguliga</em> in G. If the C. translit. has transposed the <em>-g-</em> and <em>-l-</em> and dropped the final syllable of <em>aguliga</em> (i.e., G. <em>aguliga</em> => <em>alugi</em>), then a reading of G. <em>*paralugi</em> could mean something like “missing finger” (i.e., G. <em>paraguli[ga]</em> = S. <em>*parāpat</em> + <em>aṅguli</em>?).</p>
+<p>I’ve opted for the more straightforward reading of S. <em>*pararuci</em> over the more convoluted possibility of <em>*paralugi</em>. [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 30 June 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> contains a couple details that refer to the story of Devadatta receiving patronage from Ajātaśatru, which is found in numerous sources. The most complete accounts are found in the various Vinayas (e.g., in Theravāda <a href="https://suttacentral.net/pli-tv-kd17/en/brahmali" target="_blank">Vin Kd 17</a>). There are also a few <em>sūtra</em>s that share similar references, such as <a href="https://suttacentral.net/sn17.35" target="_blank">SN 17.35-36</a>, SĀ 17.3 (1064), T100.3, and <a href="https://suttacentral.net/an4.68" target="_blank">AN 4.68</a>. They all are warnings to the monks to guard themselves against the greed for support that can cause a mendicant to become ambitious and corrupt like Devadatta.<br/>
-The most significant detail in this <em>sūtra</em> is that it calls Ajātaśatru by another name, which might harken back to a tradition that recalled his personal name. C. sources, however, understood this alternate name to be an epithet connected to the usurpation of his father’s throne. See the notes below for more on this. [\[back\]](#ref1)
-2. {:#n2} <em>Pararuci</em>. C. 婆羅留支 (EMC. bua-la-lɪəu-tʃɪĕ = G. <em>*pararuci</em>?). This was clearly a transliteration of an alternate name for S. Ajātaśatru (lit. “unborn enemy”), given the details that we know about the story of Devadatta.<br/>
-Chinese sources give us some information about this translit. The <strong>一切經音義</strong> lists it as another name for S. Ajātaśatru (阿闍世) that means “supreme pleasure” (勝樂), “good sight” (善見) or “missing finger” (折指) (cf. T2128.54.464c3 and 479c12). The <strong>翻梵語</strong> agrees that it means “supreme pleasure” (cf. T2130.54.1019c22). The <strong>翻譯名義集</strong> elaborates on the readings of “missing finger,” “supreme pleasure,” and “good sight.” It says that the name lit. means “missing finger,” referring to Ajātaśatru losing only a finger when he seized the throne, which made him very happy; and the palace guards considered it “good to see” (cf. T2131.54.1094c15-17). In his commentary on the <em>Visualization of Amitāyus Sūtra</em>, Zhiyi also mentions 婆羅留支 as another name of Ajātaśatru that means “missing finger” (折指) (cf. T1750.37.190a1).<br/>
-S. <em>*pararuci</em>, which could mean “supreme pleasure,” would be a straightforward reading of 婆羅留支. However, “missing” could be S. <em>parāpat</em>, and “finger” could be <em>aguliga</em> in G. If the C. translit. has transposed the <em>-g-</em> and <em>-l-</em> and dropped the final syllable of <em>aguliga</em> (i.e., G. <em>aguliga</em> => <em>alugi</em>), then a reading of G. <em>*paralugi</em> could mean something like “missing finger” (i.e., G. <em>paraguli[ga]</em> = S. <em>\*parāpat</em> + <em>aṅguli</em>?).<br/>
-I’ve opted for the more straightforward reading of S. <em>\*pararuci</em> over the more convoluted possibility of <em>\*paralugi</em>. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 June 2023
-{: .revised}
-
----
+<hr/>
