--- a/01_agama/ekottarika/12/EA_12_08.md
+++ b/01_agama/ekottarika/12/EA_12_08.md
@@ -1,50 +1,76 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 12. The Single-Entry Path | 8. The Devadatta (2)'
+title: 'The Numerical Discourses | Chapter 12: The Single-Entry Path | 8. The Devadatta (2)'
 type: kramdown
 base: ../../../
 previous: EA_12_07.html
 next: EA_12_09.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 12: The Single-Entry Path
-### 8. Devadatta (2)
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 12: The Single-Entry Path</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying on Mount Gṛdhrakūṭa near Rājagṛha. He was accompanied by an assembly of 500 great monks.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(八)</th>
+  <th class='en'>8. The Devadatta (2)</th>
+  <tr>
+    <td class='ch' title='T125.2.570c2'>聞如是： 一時，佛在羅閲城、耆闍崛山中。 與大比丘眾五百人倶。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying on Mount Gṛdhrakūṭa near Rājagṛha. He was accompanied by an assembly of 500 great monks.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.577c3'>爾時，提婆達兜壞亂眾僧，壞如來足，教阿闍世取父王殺。 復，殺羅漢比丘尼。 在大眾中，而作是説： 「何處有惡？ 惡從何生？ 誰作此惡當受其報？ 我亦不作此惡，而受其報？」</td>
+    <td id='p2'>2. It was then that Devadatta had confused the Saṅgha, injured the Tathāgata’s foot, and instructed Ajātaśatru to arrest his father, who was king, and kill him. He had also killed an arhat nun. He made this statement to a great assembly, “Where is there any evil? Where does that evil come from? Who will receive the result of doing these evils? I didn’t do these evils, but I’ll receive their result?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570c7'>爾時，有眾多比丘入羅閲城乞食，而聞此語： 「提婆達兜愚人在大眾中而作是説： 『何處有惡？ 惡從何生？ 誰作此惡，而受其報？』」 爾時，眾多比丘食後，攝取衣鉢，以尼師壇著右肩上，便往至世尊所。 頭面禮足，在一面坐。</td>
+    <td id='p3'>3. There was a group of monks who heard this said when they entered Rājagṛha to solicit alms: “That fool Devadatta said this to a great assembly, ‘Where is there any evil? Where does that evil come from? Who will receive the result of doing these evils?’” After they were done eating, that group of monks took their robes and bowls, put there sitting mats over their right shoulders, and went to visit the Bhagavān. They bowed their heads at his feet and sat to one side.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570c12'>爾時，眾多比丘白世尊曰： 「提婆達兜愚人在大眾中，而作是説： 『云何為惡無殃，作福無報？ 無有受善惡之報。』」</td>
+    <td id='p4'>4. That group of monks then said to the Bhagavān, “The fool Devadatta said this to a great assembly: ‘How is it that doing evil brings no misfortune and making merit brings no reward? No one receives good or bad results.’”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570c15'>爾時，世尊告諸比丘： 「有惡，有罪。 善惡之行皆有報應。 若彼提婆達兜愚人知有善惡報者，便當枯竭、愁憂、不樂。 沸血便從面孔出。 以彼提婆達兜不知善惡之報，是故在大眾中，而作是説： 『無善惡之報。 為惡無殃，作善無福。』」</td>
+    <td id='p5'>5. The Bhagavān addressed the monks, “There is evil; there are misdeeds. Good and bad actions both have their corresponding results. If that fool Devadatta knew there were good and bad results, then he would wither and become dejected and unhappy. Blood would bubble out from his face. But that Devadatta doesn’t know about those good and bad results, so he said to a great assembly: ‘There are no good and bad results. Doing evil brings no misfortune and doing good brings no fortune.’”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570c20'>爾時，世尊便説此偈：</td>
+    <td id='p6'>6. The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.570c21'><ul class='verse'>
+    <li class='ch'>「愚者審自明<br/>
+    為惡為有福，<br/>
+    我今豫了知<br/>
+    善惡之報應。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“A fool might decide for himself<br/>
+    That doing evil has no results,<br/>
+    But I’ve fully understood that<br/>
+    Good and evil have their results.</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.570c23'>「如是，諸比丘，當遠離惡，為福莫惓。 諸比丘，當作是學。」</td>
+    <td id='p7'>7. “Therefore, monks, you must stay far away from evil and not get tired of making merit. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570c24'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p8'>8. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that Devadatta had confused the Saṅgha, injured the Tathāgata’s foot, and instructed Ajātaśatru to arrest his father, who was king, and kill him. He had also killed an arhat nun. He made this statement to a great assembly, “Where is there any evil? Where does that evil come from? Who will receive the result of doing these evils? I didn’t do these evils, but I’ll receive their result?”
-{:#p2}
+<hr/>
 
-3\. There was a group of monks who heard this said when they entered Rājagṛha to solicit alms: “That fool Devadatta said this to a great assembly, ‘Where is there any evil? Where does that evil come from? Who will receive the result of doing these evils?’” After they were done eating, that group of monks took their robes and bowls, put there sitting mats over their right shoulders, and went to visit the Bhagavān. They bowed their heads at his feet and sat to one side.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. That group of monks then said to the Bhagavān, “The fool Devadatta said this to a great assembly: ‘How is it that doing evil brings no misfortune and making merit brings no reward? No one receives good or bad results.’”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0570c02" target="_blank">T125.2.570c2-25</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. The Bhagavān addressed the monks, “There is evil; there are misdeeds. Good and bad actions both have their corresponding results. If that fool Devadatta knew there were good and bad results, then he would wither and become dejected and unhappy. Blood would bubble out from his face. But that Devadatta doesn’t know about those good and bad results, so he said to a great assembly: ‘There are no good and bad results. Doing evil brings no misfortune and doing good brings no fortune.’”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 30 June 2023</p>
 
-6\. The Bhagavān then spoke in verse:
-{:#p6}
-
-* {:.verse}“A fool might decide for himself\\
-That doing evil has no results,\\
-But I’ve fully understood that\\
-Good and evil have their results.
-
-7\. “Therefore, monks, you must stay far away from evil and not get tired of making merit. Thus, monks, you should train yourselves.”
-{:#p7}
-
-8\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p8}
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 June 2023
-{: .revised}
-
----
+<hr/>
