--- a/01_agama/ekottarika/12/EA_12_09.md
+++ b/01_agama/ekottarika/12/EA_12_09.md
@@ -1,39 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 12. The Single-Entry Path | 9. Skin'
+title: 'The Numerical Discourses | Chapter 12: The Single-Entry Path | 9. Skin'
 type: kramdown
 base: ../../../
 previous: EA_12_08.html
 next: EA_12_10.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 12: The Single-Entry Path
-### 9. Skin
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 12: The Single-Entry Path</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(九)</th>
+  <th class='en'>9. Skin</th>
+  <tr>
+    <td class='ch' title='T125.2.570c26'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.570c27'>爾時世尊告諸比丘： 「受人利養甚重、不易，令人不得至無為之處。 所以然者？ 利養之報斷入人皮。 以斷皮，便斷肉。 以斷肉，便斷骨。 以斷骨，便徹髓。</td>
+    <td id='p2'>2. It was then that Bhagavān addressed the monks, “Someone taking profit is a serious thing, not an easy thing, for it prevents a person from reaching the unconditioned abode. Why is that? The reward of profit cuts into a person’s skin. Cutting through skin, it cuts into their flesh. Cutting into their flesh, it cuts into their bones. Cutting into bone, it cuts into their marrow.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571a1'>「諸比丘，當以此方便，知利養甚重。 若未生利養心，便不生。 已生，求令滅之。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, in this way, you should know that profit is a very serious thing. If thoughts of profit have yet to arise, then don’t produce them. If they’ve already arisen, then work to stop them. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571a4'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that Bhagavān addressed the monks, “Someone taking profit is a serious thing, not an easy thing, for it prevents a person from reaching the unconditioned abode. Why is that? The reward of profit cuts into a person’s skin. Cutting through skin, it cuts into their flesh. Cutting into their flesh, it cuts into their bones. Cutting into bone, it cuts into their marrow.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, in this way, you should know that profit is a very serious thing. If thoughts of profit have yet to arise, then don’t produce them. If they’ve already arisen, then work to stop them. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0570c26" target="_blank">T125.2.570c26-1a4</a>. This <em>sūtra</em> is similar to SN 17.28. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 30 June 2023</p>
 
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is similar to <a href="https://suttacentral.net/sn17.28" target="_blank">SN 17.28</a>. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 June 2023
-{: .revised}
-
----
+<hr/>
