--- a/01_agama/ekottarika/12/EA_12_10.md
+++ b/01_agama/ekottarika/12/EA_12_10.md
@@ -1,54 +1,81 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 12. The Single-Entry Path | 10. Śrīla'
+title: 'The Numerical Discourses | Chapter 12: The Single-Entry Path | 10. Śrīla'
 type: kramdown
 base: ../../../
 previous: EA_12_09.html
 next: ../13/EA_13_01.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 12: The Single-Entry Path
-### 10. Śrīla
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 12: The Single-Entry Path</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一〇)</th>
+  <th class='en'>10. Śrīla</th>
+  <tr>
+    <td class='ch' title='T125.2.571a5'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571a6'>爾時，世尊告諸比丘： 「受人利養甚為不易，令人不得至無為之處。 所以然者？ 若彼師利羅比丘不貪利養者，不作爾許無量殺生。 身壞、命終，生地獄中。」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Someone taking profit is a serious thing, not an easy thing,<sup id="ref2"><a href="#n2">2</a></sup> for it prevents a person from reaching the unconditioned abode. Why is that? If that monk Śrīla<sup id="ref3"><a href="#n3">3</a></sup> hadn’t craved profit, it wouldn’t have occurred to him to kill measureless beings. He was born in Hell after his body broke up and his life ended.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571a9'>爾時，世尊便説此偈：</td>
+    <td id='p3'>3. The Bhagavān then spoke in verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.571a11'><ul class='verse'>
+    <li class='ch'>「受人利養重；<br/>
+    壞人清白行。<br/>
+    是故當制心<br/>
+    莫貪著於味。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Taking profit is a serious thing;<br/>
+    It can ruin a person’s clean conduct.<br/>
+    Therefore, you must discipline your thinking;<br/>
+    Don’t take delight in that greedy longing.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='T125.2.571a13'><ul class='verse'>
+    <li class='ch'>師利以得定，<br/>
+    乃至天帝宮。<br/>
+    便於神通退<br/>
+    墮於屠殺中。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Because he attained samādhi, Śrīla<br/>
+    Ascended up to Lord Śakra’s palace.<br/>
+    He regressed from that spiritual knowledge<br/>
+    And then fell back down to a slaughterhouse.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.571a15'>「諸比丘，當以此方便知受人利養甚為不易。如是比丘當作是學。 未生利養心，制令不生。 已生此心，求方便令滅。 如是，諸比丘，當作是學。」</td>
+    <td id='p4'>4. “Therefore, monks, you should know from this that taking profit is a serious thing, not an easy thing.<sup id="ref4"><a href="#n4">4</a></sup> Control and prevent thoughts about profit before they arise. If they’ve already arisen, work to make them cease. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.571a18'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Someone taking profit is a serious thing, not an easy thing,[\[1\]](#n1){:#ref1} for it prevents a person from reaching the unconditioned abode. Why is that? If that monk Śrīla[\[2\]](#n2){:#ref2} hadn’t craved profit, it wouldn’t have occurred to him to kill measureless beings. He was born in Hell after his body broke up and his life ended.”
-{:#p2}
+<hr/>
 
-3\. The Bhagavān then spoke in verse:
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-* {:.verse}“Taking profit is a serious thing;\\
-It can ruin a person’s clean conduct.\\
-Therefore, you must discipline your thinking;\\
-Don’t take delight in that greedy longing.
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0571a05" target="_blank">T125.2.571a5-19</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>a serious thing, not an easy thing</em>. C. 甚為不易. The previous <em>sutra</em> has the same opening line, which reads 甚<strong>重</strong>、不易. I’ve corrected this passage assuming a copyist has replaced 重 with 為. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Śrīla</em>. C. 師利羅 (EMC. ṣïi-lɪi-la = G. <em>śirila</em> = S. <em>śrīla</em>). This personal name is attested in G. sources, but the particular figure being referenced here is thus far unknown to me. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>a serious thing, not an easy thing</em>. The same correction applies here as in the opening of the <em>sūtra</em>. I’ve also ignored the spurious insertion of “Thus, monks, you should train yourselves” that occurs at this point. [<a href="#ref4">back</a>]</p></li>
+</ol>
+<hr/>
 
-* {:.verse}Because he attained samādhi, Śrīla\\
-Ascended up to Lord Śakra’s palace.\\
-He regressed from that spiritual knowledge\\
-And then fell back down to a slaughterhouse.”
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 12 July 2023</p>
 
-4\. “Therefore, monks, you should know from this that taking profit is a serious thing, not an easy thing.[\[3\]](#n3){:#ref2} Control and prevent thoughts about profit before they arise. If they’ve already arisen, work to make them cease. Thus, monks, you should train yourselves.”
-{:#p4}
-
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
-
----
-
-### Notes
-
-1. {:#n1} <em>a serious thing, not an easy thing</em>. C. 甚為不易. The previous <em>sutra</em> has the same opening line, which reads 甚<strong>重</strong>、不易. I’ve corrected this passage assuming a copyist has replaced 重 with 為. [\[back\]](#ref1)
-2. {:#n2} <em>Śrīla</em>. C. 師利羅 (EMC. ṣïi-lɪi-la = G. <em>śirila</em> = S. <em>śrīla</em>). This personal name is attested in G. sources, but the particular figure being referenced here is thus far unknown to me. [\[back\]](#ref2)
-3. {:#n3} <em>a serious thing, not an easy thing</em>. The same correction applies here as in the opening of the <em>sūtra</em>. I’ve also ignored the spurious insertion of “Thus, monks, you should train yourselves” that occurs at this point. [\[back\]](#ref3)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 12 July 2023
-{: .revised}
-
----
+<hr/>
