--- a/01_agama/ekottarika/11/EA_11_04.md
+++ b/01_agama/ekottarika/11/EA_11_04.md
@@ -1,44 +1,60 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 11. The Non-Returner | 4. Non-Returning (4)'
+title: 'The Numerical Discourses | Chapter 11: The Non-Returner | 4. Non-Returning (4)'
 type: kramdown
 base: ../../../
 previous: EA_11_03.html
 next: EA_11_05.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 11: The Non-Returner
-### 4. Non-Returning (4)
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 11: The Non-Returner</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(四) 阿那含</th>
+  <th class='en'>4. Non-Returning (4)</th>
+  <tr>
+    <td class='ch' title='T125.2.566c1'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566c2'>爾時，世尊告諸比丘： 「當滅一法捨離一法，我證汝等成阿那含。 云何為一法？ 所謂慳貪。 是故，諸比丘，當滅慳貪，我證汝等阿那含。」</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If someone were to cease one thing, I’d bear witness that they’ve become a non-returner. What is that one thing? It’s stinginess. Monks, you should cease stinginess, then I’ll bear witness that you’ve become non-returners.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.566c5'>爾時，世尊便説此偈：</td>
+    <td id='p3'>3. The Buddha then spoke this verse:</td>
+  </tr>
+<tr>
+  <td title='T125.2.566c6'><ul class='verse'>
+    <li class='ch'>「慳貪之所染<br/>
+    眾生墮惡趣。<br/>
+    當懃捨慳貪，<br/>
+    便成阿那含。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“The stain of stinginess<br/>
+    Makes sentient beings fall to bad destinies.<br/>
+    One should endeavor to abandon stinginess,<br/>
+    Then they’ll become a non-returner.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='T125.2.566c8'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “If someone were to cease one thing, I’d bear witness that they’ve become a non-returner. What is that one thing? It’s stinginess. Monks, you should cease stinginess, then I’ll bear witness that you’ve become non-returners.”
-{:#p2}
+<hr/>
 
-3\. The Buddha then spoke this verse:
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-* {:.verse}“The stain of stinginess\\
-Makes sentient beings fall to bad destinies.\\
-One should endeavor to abandon stinginess,\\
-Then they’ll become a non-returner.”
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0566c01" target="_blank">T125.2.566c1-8</a>. This <em>sūtra</em> corresponds to <a href="https://suttacentral.net/iti3" target="_blank">Iti 4</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 2 April 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> corresponds to <a href="https://suttacentral.net/iti4" target="_blank">Iti 4</a>. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 2 April 2023
-{: .revised}
-
----
+<hr/>
