--- a/01_agama/ekottarika/12/EA_12_04.md
+++ b/01_agama/ekottarika/12/EA_12_04.md
@@ -1,39 +1,54 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 12. The Single-Entry Path | 4. Watching over the Sick'
+title: 'The Numerical Discourses | Chapter 12: The Single-Entry Path | 4. Watching over the Sick'
 type: kramdown
 base: ../../../
 previous: EA_12_03.html
 next: EA_12_05.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 12: The Single-Entry Path
-### 4. Watching over the Sick
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 12: The Single-Entry Path</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(四)</th>
+  <th class='en'>4. Watching over the Sick</th>
+  <tr>
+    <td class='ch' title='T125.2.569b29'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569c1'>爾時，世尊告諸比丘： 「其有瞻視病者，則為瞻視我已。 有看病者，則為看我已。 所以然者？ 我今躬欲看視疾病。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If someone watches over the sick, then they’ve watched over me. Someone who looks after the sick has looked after me. Why is that? Right now, I myself am looking after the sick.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569c3'>「諸比丘，我不見一人於諸天、世間沙門、婆羅門，施中最上、無過是施。 其行是施爾乃為施。 獲大果報，得大功徳，名稱，普至，得甘露法味。 所謂如來、至真、等正覺。 知施中最上、無過是施，其行是施爾乃為施。 獲大果報，得大功徳⋯</td>
+    <td id='p3'>3. “Monks, I don’t see a single person among the gods and the world’s ascetics and priests who gives the supreme and unsurpassed gift. The generosity that person practices is such a gift. They obtain a great reward, great virtue, become well known, achieve the complete attainments, and attain the sweet-tasting Dharma dew. That person is the Tathāgata, Arhat, and Completely Awakened One. He knows the supreme and unsurpassed gift of gifts, and his practice of generosity is such of gift. He obtains great rewards and great virtue …</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569c9'>「我今因此因縁而作是説： 『瞻視病者，則為瞻視我已，』而無有異。 汝等長夜獲大福祐。</td>
+    <td id='p4'>4. “To create the conditions for this [gift] to arise, I now say, ‘Someone who watches over the sick has watched over me.’ It’s no different. You’ll obtain that great fortune after a long time.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569c11'>「如是，諸比丘，當作是學。」</td>
+    <td id='p5'>5. “Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.569c11'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p6'>6. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “If someone watches over the sick, then they’ve watched over me. Someone who looks after the sick has looked after me. Why is that? Right now, I myself am looking after the sick.
-{:#p2}
+<hr/>
 
-3\. “Monks, I don’t see a single person among the gods and the world’s ascetics and priests who gives the supreme and unsurpassed gift. The generosity that person practices is such a gift. They obtain a great reward, great virtue, become well known, achieve the complete attainments, and attain the sweet-tasting Dharma dew. That person is the Tathāgata, Arhat, and Completely Awakened One. He knows the supreme and unsurpassed gift of gifts, and his practice of generosity is such of gift. He obtains great rewards and great virtue …
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “To create the conditions for this [gift] to arise, I now say, ‘Someone who watches over the sick has watched over me.’ It’s no different. You’ll obtain that great fortune after a long time.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0569b29" target="_blank">T125.2.569b29-c12</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. “Thus, monks, you should train yourselves.”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 29 June 2023</p>
 
-6\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p6}
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 29 June 2023
-{: .revised}
-
----
+<hr/>
